깃허브 페이지에 브랜치 별로 파일 나누기 + 할 일 진행률에 따른 변경 + 할 일 날짜 추가 + 깃허브 파일 올리기 및 미리보

--- a/JOBCHO/src/main/resources/static/css/git/git_commit.css
+++ b/JOBCHO/src/main/resources/static/css/git/git_commit.css
@@ -66,7 +66,7 @@ header {
 }
 
 #last_commit_file_count {
-	color: rgb(151, 231, 198);
+	color: rgb(6, 195, 115);
 	font-weight: 600
 }
 
@@ -76,6 +76,14 @@ header {
 #last_commit_date {
 	font-weight: 700;
 	color: rgb(125, 125, 125);
+}
+
+#last_commit_content {
+	margin-right: 4rem;
+}
+
+select {
+	padding: 0.5rem;	
 }
 
 #file_commit_date,
