--- a/JOBCHO/src/main/resources/static/css/workspace/task.css
+++ b/JOBCHO/src/main/resources/static/css/workspace/task.css
@@ -103,3 +103,18 @@
 	display: flex;
 	flex-direction: row;
 }
+
+.progress_bar_container {
+	width: 100%;
+	background-color: rgb(228, 228, 228);
+	border-radius: 10px;
+	overflow: hidden;
+	height: 8px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+.progress_bar {
+	height: 100%;
+	background-color: rgb(6, 195, 115);
+}
