CSS 마무리 작업(수고했어), 안쓰는 아이콘 제거, 워크스페이스 메인 업데이트

--- a/JOBCHO/src/main/resources/templates/workspace/workspace.html
+++ b/JOBCHO/src/main/resources/templates/workspace/workspace.html
@@ -38,7 +38,7 @@
 				<a th:href="@{/index}">
 					<div class="jobcho_logo">
 						<img th:src="@{/images/Jobcho_logo.png}" alt="Jobcho_logo" />
-						<p>Jabcho</p>
+						<p>Jobcho</p>
 					</div>
 				</a>
 				<div class="header_icon_info">
@@ -160,7 +160,6 @@
 							</div>
 						</div>
 					</div>
-					<a href=""><img th:src="@{/images/icons/search (1).png}" alt="i_alarm"></img></a>
 					<div class="more-options-wrapper">
 						<a href="" id="menu_link"><img th:src="@{/images/icons/menu.png}" alt="i_menu"
 								id="menu_icon"></img></a>
@@ -170,7 +169,7 @@
 									<img th:src="@{/images/icons/to-do-list.png}">
 									<a href="" id="task-link">할 일</a>
 								</div>
-								<div class="popup_format">
+								<div class="popup_format" id="vote_popup">
 									<img th:src="@{/images/icons/vote.png}">
 									<a href="" id="vote-link">투표</a>
 								</div>
@@ -710,7 +709,6 @@
 							<div class="upper_container">
 								<div class="bookmark_title">
 									<p class="bookmark_sign">즐겨찾기</p>
-									<p>X</p>
 								</div>
 								<div class="btn_container">
 									<div class="form_btns">
