--- a/JOBCHO/src/main/resources/templates/workspace/workspace_sidebar_taskDetail.html
+++ b/JOBCHO/src/main/resources/templates/workspace/workspace_sidebar_taskDetail.html
@@ -47,7 +47,7 @@
 						</select>
 					</form>
 				</div>
-				<button type="submit" form="modifyForm">진도 업데이트</button>
+				<button type="submit" form="modifyForm" style="color: white;">진도 업데이트</button>
 				<p>일정</p>
 				<div class="tasks_detail_row2">
 					<img th:src="@{/images/icons/currunt_users.png}" alt="날짜 아이콘">
