--- a/JOBCHO/src/main/resources/static/css/workspace/workspace.css
+++ b/JOBCHO/src/main/resources/static/css/workspace/workspace.css
@@ -1,3 +1,8 @@
+header{
+	min-width: 1600px;
+	width: 100%;
+}
+
 .header_icon_info {
 	display: flex;
 	align-items: center;
@@ -44,6 +49,7 @@
 	flex: 1;
 	display: flex;
 	flex-direction: column;
+	width: 100%
 }
 
 .chat-aside {
@@ -56,12 +62,14 @@
 }
 
 .main.show-aside .chat-aside {
-	width: 600px !important;
+	width: 512px !important;
+	min-width: 512px;
 }
 
 .main.show-aside .chat {
 	flex: none;
-	width: 900.67px;
+	width: calc(100% - 512px - 270px);
+	min-width: 818px;
 }
 
 .folder {
@@ -156,7 +164,8 @@
 }
 
 .side_bar {
-	width: 300px;
+	width: 270px;
+	min-width: 270px;
 	border-right: 1px solid rgb(228, 228, 227);
 	height: calc(100vh - 4.4rem);
 }
@@ -316,7 +325,7 @@
 }
 
 .chat_input_box>input {
-	width: 87rem;
+	width: 100%;
 	height: 3rem;
 	margin-top: 1.2rem;
 	margin-left: 1rem;
@@ -748,4 +757,12 @@
 .completed-task * {
 	text-decoration: line-through;
 	color: gray;
+}
+
+#vote_popup{
+	display: none;
+}
+
+.register_btn{
+	color: white;
 }
