--- a/JOBCHO/src/main/resources/static/css/workspace/workspace_icons.css
+++ b/JOBCHO/src/main/resources/static/css/workspace/workspace_icons.css
@@ -1,7 +1,7 @@
 .popup_format {
 	display: flex;
 	flex-direction: row;
-	padding-bottom: 0.3rem;
+	padding-block: 0.3rem;
 	align-items: center;
 }
 
