--- a/JOBCHO/src/main/resources/templates/workspace/workspace_basic2.html
+++ b/JOBCHO/src/main/resources/templates/workspace/workspace_basic2.html
@@ -23,11 +23,13 @@
 		<link rel="stylesheet" th:href="@{/css/workspace/chatroom_member.css}">
 		<link rel="stylesheet" th:href="@{/css/workspace/side_alarm.css}" />
 		<link rel="stylesheet" th:href="@{/css/workspace/workspace_basic.css}" />
+		<link rel="stylesheet" th:href="@{/css/cs/customerservicecenter.css}" />
 
 		<script th:src="@{/javascript/workspace/organization_search.js}" defer></script>
 		<script th:src="@{/javascript/workspace/bookmark.js}" defer></script>
 		<script th:src="@{/javascript/workspace/workspace_click.js}" defer></script>
 		<script th:src="@{/javascript/workspace/invite_chat_member.js}" defer></script>
+		<script th:src="@{/javascript/cs/close_service_center.js}" defer></script>
 	</head>
 
 	<body th:data-user-name="${user.userName}" th:data-user-id="${user.userId}" th:data-workspace-id="${workspaceId}"
@@ -37,13 +39,14 @@
 			<a th:href="@{/index}">
 				<div class="jobcho_logo">
 					<img th:src="@{/images/Jobcho_logo.png}" alt="Jobcho_logo" />
-					<p>Jabcho</p>
+					<p>Jobcho</p>
 				</div>
 			</a>
 			<div class="header_icon_info">
 				<div class="more-options-wrapper">
 					<a href="" class="header_alarm_icon">
-						<img th:src="@{/images/icons/alarm-bell.png}" alt="i_alarm" onclick="showAlarm()">
+						<img th:data-workspace-id="${workspaceId}" th:src="@{/images/icons/alarm-bell.png}"
+							alt="i_alarm" onclick="showAlarm()">
 						<span class="is_new_alarm" style="visibility: hidden;"></span>
 					</a>
 					<div id="side_alarm">
@@ -74,19 +77,22 @@
 										</div>
 										<div class="alarm_text">
 											<p class="alarm_sign">공지를 등록했습니다.</p>
-											<p class="alarm_content" th:text="${alarmItem.notification.content}"></p>
+											<p class="alarm_content" th:text="${alarmItem.notification.content}">
+											</p>
 										</div>
 									</div>
 									<!-- 할 일 알림 -->
 									<div th:if="${alarmItem.task != null}">
-										<p class="chatroom_name" th:text="${alarmItem.task.chatroom.chatroomName}">채팅방
+										<p class="chatroom_name" th:text="${alarmItem.task.chatroom.chatroomName}">
+											채팅방
 											이름
 										</p>
 										<div class="author_info">
 											<img th:src="@{/uploads/profileImg/{img}(img=${alarmItem.task.author.userImg})}"
 												alt="profile_img" />
 											<div class="author_name_and_created_date">
-												<p class="author_name" th:text="${alarmItem.task.author.userName}">작성자
+												<p class="author_name" th:text="${alarmItem.task.author.userName}">
+													작성자
 													이름
 												</p>
 												<p class="created_date" th:text="${alarmItem.createdDate}"></p>
@@ -117,7 +123,8 @@
 											<span th:text="${alarmItem.mention.sender.userName}"></span>
 											<p class="alarm_sign">님이 멘션했습니다.</p>
 										</div>
-										<p class="mention_content" th:text="${alarmItem.mention.message.content}"></p>
+										<p class="mention_content" th:text="${alarmItem.mention.message.content}">
+										</p>
 									</div>
 								</div>
 							</div>
@@ -152,7 +159,6 @@
 						</div>
 					</div>
 				</div>
-				<a href=""><img th:src="@{/images/icons/search (1).png}" alt="i_alarm"></img></a>
 				<div class="more-options-wrapper">
 					<a href="" id="menu_link"><img th:src="@{/images/icons/menu.png}" alt="i_menu"
 							id="menu_icon"></img></a>
@@ -162,7 +168,7 @@
 								<img th:src="@{/images/icons/to-do-list.png}">
 								<a href="" id="task-link">할 일</a>
 							</div>
-							<div class="popup_format">
+							<div class="popup_format" id="vote_popup">
 								<img th:src="@{/images/icons/vote.png}">
 								<a href="" id="vote-link">투표</a>
 							</div>
@@ -184,8 +190,8 @@
 								<a th:href="@{|/${workspaceId}/invite|}">새로운 맴버 초대하기</a>
 							</div>
 							<div class="popup_format">
-								<img th:src="@{/images/icons/paper-aeroplane.png}">
-								<a href="">1:1 문의하기</a>
+								<img th:src="@{/images/icons/paper-aeroplane.png}" class="openCsImg">
+								<a href="" id="cs_a">1:1 문의하기</a>
 							</div>
 							<div class="popup_format">
 								<img th:src="@{/images/icons/admin.png}">
@@ -196,8 +202,50 @@
 								<a href="http://localhost:2003/user/setting">계정 설정</a>
 							</div>
 							<div class="popup_format">
+								<img th:src="@{/images/icons/commit-git.png}">
+								<a th:href="@{|/workspace/${workspaceId}/project|}">프로젝트 관리</a>
+							</div>
+							<div class="popup_format">
 								<img th:src="@{/images/icons/exit-to-app-button.png}">
 								<a href="http://localhost:2003/user/logout">로그아웃</a>
+							</div>
+						</div>
+					</div>
+					<div class="csChatBox">
+						<div class="total_container_cs">
+							<div class="customer_service_center_container">
+								<div class="upper_container_cs">
+									<p class="service_center_text">
+										잡초에 <strong>궁금한 점</strong>이 있다면?
+									</p>
+									<p class="service_center_text">
+										저희가 <strong>답변</strong>드립니다.
+									</p>
+									<h2 class="service_center_text_h2">유저<small>의</small> 소리</h2>
+								</div>
+								<h2 class="service_center_text_h2">JOBCHO</h2>
+
+								<div class="lower_container">
+									<div class="pop_container">
+										<p>JOBCHO</p>
+										<p th:text="${user.userName + '님, 궁금한 점이 있으신가요?'}"></p>
+										<a th:href="@{/cs/chat/{userId}(userId=${user.userId})}" class="chat-link">
+											<p>문의하기</p>
+											<img th:src="@{/images/icons/paper-aeroplane.png}" alt="" />
+										</a>
+									</div>
+									<div class="btn_container_cs">
+										<a href="/index">
+											<img th:src="@{/images/icons/home-icon-silhouette (1).png}" alt="" />
+										</a>
+										<a th:href="@{/cs/chat/{userId}(userId=${user.userId})}" class="chat-link">
+											<img th:src="@{/images/icons/conversation.png}" alt="" />
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="x_btn">
+								<img th:src="@{/images/icons/cross-mark.png}" alt="" />
 							</div>
 						</div>
 					</div>
@@ -212,11 +260,8 @@
 					<div class="workroom">
 						<div class="search_chat_line">
 							<div class="icon_box">
-								<img th:src="@{/images/icons/search_black.png}" alt="대화방 검색 아이콘">
-								<p>대화방 검색</p>
-							</div>
-							<div class="icon_box">
-								<img th:src="@{/images/icons/show_menu.png}" alt="메뉴 숨기기">
+								<img th:src="@{/images/icons/git_folder.png}" alt="대화방 검색 아이콘">
+								<p>모든 대화방</p>
 							</div>
 						</div>
 						<div class="search_chat_line">
@@ -225,10 +270,7 @@
 								<p>채팅방</p>
 							</div>
 							<div class="icon_box_2">
-								<img th:src="@{/images/icons/sort_ascending.png}" alt="정렬메뉴">
-							</div>
-							<div class="icon_box_2">
-								<img th:src="@{/images/icons/cross-mark.png}" alt="새로 만들기 버튼" id="create_folder_btn">
+								<img th:src="@{/images/icons/add-folder.png}" alt="새로 만들기 버튼" id="create_folder_btn">
 							</div>
 						</div>
 						<div th:each="folder, iterStat : ${folders}" class="folder">
@@ -324,8 +366,8 @@
 
 								<img th:src="@{/images/Jobcho_logo.png}" alt="잡초 로고 small">
 								<a
-									th:href="@{/workspace/{workspaceId}/mychat/{myChatroomId} (workspaceId=${workspaceId}, myChatroomId=${mychat.chatroom.chatroomId})}">The
-									Jobcho (나와의 대화)</a>
+									th:href="@{/workspace/{workspaceId}/mychat/{myChatroomId} (workspaceId=${workspaceId}, myChatroomId=${mychat.chatroom.chatroomId})}">
+									The Jobcho (나와의 대화)</a>
 							</div>
 						</div>
 					</div>
@@ -338,22 +380,35 @@
 				</div>
 
 				<div class="chat-aside" id="chat-aside">
-					<div class="task_total_container">
-						<div class="upper_container">
-							<p class="title">할 일</p>
-							<button id="create-task">+ 할 일 생성</button>
-						</div>
-						<div th:each="task, iterStat : ${tasks}" class="under_container" id="task_detail_container"
-							th:data-workspace-id="${workspaceId}" th:data-chatroom-id="${chatroomId}"
-							th:data-task-id="${task.taskId}" onclick="openSideTask(this)">
-							<p class="number_of_tasks" th:text="|${#lists.size(tasks)}개의 할일|"><strong>2</strong>개의 할
-								일
-							</p>
-							<div class="tasks" th:attr="id='tasks-' + ${iterStat.index}">
-								<p class="task_status" th:text="|진행률: ${task.status}%|"><strong>0</strong>%</p>
-								<p class="task_title" th:text="${task.taskTitle}"></p>
-								<p class="task_content" th:text="${task.description}"></p>
-								<p class="task_date" th:text="${task.startDate}"></p>
+					<div class="task-aside-total-container">
+						<div class="task_total_container">
+							<div class="upper_container">
+								<p class="title">할 일</p>
+								<button id="create-task">+ 할 일 생성</button>
+								<p class="number_of_tasks"><strong th:text="${#lists.size(tasks)}"></strong>개의 할일
+								</p>
+							</div>
+							<div th:each="task, iterStat : ${tasks}" class="under_container" id="task_detail_container"
+								th:data-workspace-id="${workspaceId}" th:data-chatroom-id="${task.chatroom.chatroomId}"
+								th:data-task-id="${task.taskId}" onclick="openSideTask(this)">
+								<div class="tasks" th:attr="id='tasks-' + ${iterStat.index}"
+									th:classappend="${task.status == 100} ? ' completed-task'">
+									<p class="task_status" th:text="|진행률: ${task.status}%|"><strong>0</strong>%</p>
+									<p class="task_title" th:text="${task.taskTitle}"></p>
+									<p class="task_content" th:text="${task.description}"></p>
+									<div class="progress_bar_container">
+										<div class="progress_bar" th:style="'width:' + ${task.status} + '%'"></div>
+									</div>
+									<div class="task_date_container">
+										<p class="task_date"
+											th:text="${#temporals.format(task.startDate, 'yyyy년 M월 d일 H시 mm분')}">
+										</p>
+										<p>&nbsp; ~ &nbsp;</p>
+										<p class="task_date"
+											th:text="${#temporals.format(task.endDate, 'yyyy년 M월 d일 H시 mm분')}"></p>
+									</div>
+									<p class="team_name" th:text="${task.chatroom.chatroomName}"></p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -392,7 +447,6 @@
 						<div class="upper_container">
 							<div class="bookmark_title">
 								<p class="bookmark_sign">즐겨찾기</p>
-								<p>X</p>
 							</div>
 							<div class="btn_container">
 								<div class="form_btns">
